--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-vendor/*/
+vendor/github.com/stretchr
+vendor/github.com/pkg
+vendor/github.com/davecgh
+
 .DS_Store
