--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,24 @@
-sudo: required
 language: go
-
-# Only the last two Go releases are supported by the Go team with security
-# updates. Any versions older than that should be considered deprecated.
-# Don't bother testing with them. tip builds your code with the latest
-# development version of Go. This can warn you that your code will break
-# in the next version of Go. Don't worry! Later we declare that test runs
-# are allowed to fail on Go tip.
 go:
-  - 1.9
-  - master 
-
-# Skip the install step. Don't `go get` dependencies. Only build with the
-# code in vendor/
-install: true
+  - 1.9.x
+  - 1.10.x
+  - tip
 
 matrix:
-  # It's ok if our code fails on unstable development versions of Go.
   allow_failures:
-    - go: master
-  # Don't wait for tip tests to finish. Mark the test run green if the
-  # tests pass on the stable versions of Go.
+    - go: tip
   fast_finish: true
 
-# Don't email me the results of the test runs.
-notifications:
-  email: false
-
-# Anything in before_script that returns a nonzero exit code will
-# flunk the build and immediately stop. It's sorta like having
-# set -e enabled in bash. 
-before_script:
+install:
   - go get -u github.com/kardianos/govendor
   - govendor sync
-  - go get github.com/alecthomas/gometalinter
-  - gometalinter --install --vendored-linters
+  - go get -u github.com/mgechev/revive
 
-# script always run to completion (set +e). All of these code checks are must haves
-# in a modern Go project.
+before_script:
+  - revive -formatter friendly $(go list ./... | grep -v /vendor/)
+
 script:
-  - gometalinter                             # Run gometalinter
-  - go test -v -race ./...                   # Run all the tests with the race detector enabled
+  - sh ./test.sh
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
